--- a/workshops/Workshop Week 1.ipynb
+++ b/workshops/Workshop Week 1.ipynb
@@ -13,41 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package gutenberg to /root/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/gutenberg.zip.\n"
+      "[nltk_data] Downloading package gutenberg to\n",
+      "[nltk_data]     /Users/gideonsacks/nltk_data...\n",
+      "[nltk_data]   Package gutenberg is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['austen-emma.txt',\n",
-       " 'austen-persuasion.txt',\n",
-       " 'austen-sense.txt',\n",
-       " 'bible-kjv.txt',\n",
-       " 'blake-poems.txt',\n",
-       " 'bryant-stories.txt',\n",
-       " 'burgess-busterbrown.txt',\n",
-       " 'carroll-alice.txt',\n",
-       " 'chesterton-ball.txt',\n",
-       " 'chesterton-brown.txt',\n",
-       " 'chesterton-thursday.txt',\n",
-       " 'edgeworth-parents.txt',\n",
-       " 'melville-moby_dick.txt',\n",
-       " 'milton-paradise.txt',\n",
-       " 'shakespeare-caesar.txt',\n",
-       " 'shakespeare-hamlet.txt',\n",
-       " 'shakespeare-macbeth.txt',\n",
-       " 'whitman-leaves.txt']"
+       "['[', 'Emma', 'by', 'Jane', 'Austen', '1816', ']', ...]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +39,8 @@
    "source": [
     "import nltk\n",
     "nltk.download('gutenberg')\n",
-    "nltk.corpus.gutenberg.fileids()"
+    "#nltk.corpus.gutenberg.fileids()\n",
+    "nltk.corpus.gutenberg.words()"
    ]
   },
   {
