--- a/lectures/W01L2Python.ipynb
+++ b/lectures/W01L2Python.ipynb
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1633,12 +1633,13 @@
        " ['This', 'is', 'another', 'sentence', '.']]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import nltk\n",
     "text = \"This is a sentence. This is another sentence.\"\n",
     "text_sent_tokens = [nltk.word_tokenize(s) for s in nltk.sent_tokenize(text)]\n",
     "text_sent_tokens"
@@ -1646,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1665,7 @@
        "  ('.', '.')]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
